--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     <a target="_blank" href="https://translate.google.com/?sl=en&tl=vi&text=subscripted&op=translate">
         <img src="shopping_in_base.png" alt="img error...">
     </a>
+    <!-- 
+        <fieldset></fieldset> : để nhóm các input và label
+        <legend></legend> : để chú thích cho fieldset> 
+    -->
     
 </body>
 
